# LLM-Merging

./: .gitignore  pyproject.toml  setup.py
docs/source/: conf.py
llm_merging/: config.py  main.py
llm_merging.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llm_merging/llm_merging.egg-info/: entry_points.txt
llm_merging/merging/: FlanT5Avg.py  Llama3Avg.py  LlamaAvg.py  Merges.py  __init__.py
llm_merging/model/: __init__.py  decoder_functions.py  encoder_decoder_functions.py
output/flan_t5_avg/predictions/: cosmos_qa.jsonl
output_prev/flan_t5_avg/: scores.jsonl
output_prev/flan_t5_avg/predictions/: xsum.jsonl
